--- a/SportsStoreWebApp/Views/Product/Edit.cshtml
+++ b/SportsStoreWebApp/Views/Product/Edit.cshtml
@@ -1,45 +1,35 @@
 @model SportsStore.Domain.Models.Product
 @{
-	ViewData["Title"] = "Chỉnh sửa sản phẩm";
+	ViewData["Title"] = (Model.ProductID == 0 ? "Tạo sản phẩm mới" :
+	$"Chỉnh sửa sản phẩm: {Model.Name}");
 }
-<h1>Chỉnh sửa sản phẩm</h1>
-<form asp-action="Edit" method="post" class="needs-validation" novalidate>
-	<div asp-validation-summary="All" class="text-danger"></div>
+<h1>@ViewData["Title"]</h1>
+<form asp-action="Edit" method="post">
 	<input type="hidden" asp-for="ProductID" />
-
-	<div class="form-group mb-3">
+	<div class="form-group">
 		<label asp-for="Name"></label>
 		<input asp-for="Name" class="form-control" />
 		<span asp-validation-for="Name" class="text-danger"></span>
 	</div>
-
-	<div class="form-group mb-3">
+	<div class="form-group">
 		<label asp-for="Description"></label>
-		<textarea asp-for="Description" class="form-control" rows="3"></textarea>
+		<textarea asp-for="Description" class="form-control"></textarea>
 		<span asp-validation-for="Description" class="text-danger"></span>
 	</div>
-
-	<div class="form-group mb-3">
+	<div class="form-group">
 		<label asp-for="Price"></label>
-		<input asp-for="Price" class="form-control" type="number" step="0.01" />
+		<input asp-for="Price" class="form-control" />
 		<span asp-validation-for="Price" class="text-danger"></span>
 	</div>
-
-	<div class="form-group mb-3">
+	<div class="form-group">
 		<label asp-for="Category"></label>
 		<input asp-for="Category" class="form-control" />
 		<span asp-validation-for="Category" class="text-danger"></span>
 	</div>
-
-	<div class="form-group mb-3">
-		<label asp-for="ImageUrl"></label>
-		<input asp-for="ImageUrl" class="form-control" />
-		<span asp-validation-for="ImageUrl" class="text-danger"></span>
-	</div>
-
-	<div class="text-center">
-		<button class="btn btn-primary" type="submit">Lưu</button>
-		<a asp-action="List" class="btn btn-secondary">Hủy</a>
+	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+	<div class="text-center mt-3">
+		<button type="submit" class="btn btn-primary">Lưu</button>
+		<a asp-action="List" class="btn btn-secondary">Hủy bỏ</a>
 	</div>
 </form>
 
