--- a/SportsStoreWebApp/Views/Product/List.cshtml
+++ b/SportsStoreWebApp/Views/Product/List.cshtml
@@ -2,7 +2,10 @@
 @model IEnumerable<Product>
 @{
 	ViewData["Title"] = "Danh sách sản phẩm";
-	int totalPages = (int)Math.Ceiling((decimal)ViewBag.TotalItems / ViewBag.ItemsPerPage);
+	@* int totalPages = ViewBag.TotalItems ? (int)Math.Ceiling((decimal)ViewBag.TotalItems / ViewBag.ItemsPerPage) : 0; *@
+	int totalItems = ViewBag.TotalItems ?? 0;
+	int itemsPerPage = ViewBag.ItemsPerPage ?? 1;
+	int totalPages = itemsPerPage > 0 ? (int)Math.Ceiling((decimal)totalItems / itemsPerPage) : 0;
 }
 
 <h1>Danh sách sản phẩm - @ViewBag.CurrentCategory</h1>
@@ -22,7 +25,8 @@
 				<th>Mô tả</th>
 				<th>Giá</th>
 				<th>Danh mục</th>
-				<th></th>
+				<th class="text-center">Hành động</th> @*Chứa nút Sửa,-Xoá*@
+				<th></th> @*Chứa nút Thêm vào giỏ*@
 			</tr>
 		</thead>
 		<tbody>
@@ -34,6 +38,18 @@
 					<td>@p.Description</td>
 					<td>$ @p.Price.ToString("#,##0.00")</td>
 					<td>@p.Category</td>
+					<td class="text-center">
+						<a asp-action="Edit" asp-route-productId="@p.ProductID" class="btn btn-sm btn-warning">
+							Sửa
+						</a>
+						<form asp-action="Delete" asp-route-productId="@p.ProductID" method="post"
+							style="display:inline-block;">
+							<button type="submit" class="btn btn-sm btn-danger"
+								onclick="return confirm('Bạn có chắc chắn muốn xóa @p.Name không?');">
+								Xóa
+							</button>
+						</form>
+					</td>
 					<td class="text-center">
 						<form asp-action="AddToCart" asp-controller="Cart" method="post" style="display:inline-block;">
 							<input type="hidden" name="productId" value="@p.ProductID" />
