--- a/SportsStoreWebApp/Views/Shared/_Layout.cshtml
+++ b/SportsStoreWebApp/Views/Shared/_Layout.cshtml
@@ -40,6 +40,13 @@
 	</header>
 	<div class="container">
 		<main role="main" class="pb-3">
+			@if (TempData["message"] is string message)
+			{
+				<div class="alert alert-@(TempData["messageType"] ?? "info") alert-dismissible fade show" role="alert">
+					@message
+					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+				</div>
+			}
 			@RenderBody()
 		</main>
 	</div>
