View, HtmlHelper, TagHelper, Layout, Razor Syntax, Bootstrap

--- a/SportsStoreWebApp/Views/Home/Index.cshtml
+++ b/SportsStoreWebApp/Views/Home/Index.cshtml
@@ -7,4 +7,6 @@
 	<p>Tìm hiểu về <a href="https://docs.microsoft.com/aspnet/core">xây
 			dựng ứng dụng Web với ASP.NET Core</a>.</p>
 	<img src="~/images/cat-404.png" alt="Test Image" class="custom-image" />
+	<div>@Html.Raw(ViewBag.HtmlContent)</div>
+	<div>@ViewBag.HtmlContent</div>
 </div>
