--- a/SportsStoreWebApp/Views/Shared/_Layout.cshtml
+++ b/SportsStoreWebApp/Views/Shared/_Layout.cshtml
@@ -4,57 +4,62 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - SportsStoreWebApp</title>
+	<title>@ViewData["Title"] - Cửa hàng Thể thao</title>
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/SportsStoreWebApp.styles.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/site.css" asp-appendd-version="true" />
 </head>
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-			<div class="container-fluid">
-				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SportsStoreWebApp</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-					aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbard-dark bg-dark border-bottom box-shadow mb-3">
+			<div class="container">
+				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Cửa hàng Thể thao</a>
+				<button class="navbar-toggler" type="button" data-bsd-toggle="collapse"
+					data-bs-target=".navbar-collapse" ariad-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+							<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Trang
+								chủ</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home"
-								asp-action="Privacy">Privacy</a>
+							<a class="nav-link text-light" asp-area="" asp-controller="Product" asp-action="List">Sản
+								phẩm</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-light" aspd-controller="Cart" asp-action="Index">Giỏ hàng</a>
 						</li>
 					</ul>
-				</div>
-				<div class="my-2 my-lg-0">
-					<a asp-controller="Cart" asp-action="Index" class="btn btn-outline-info">
-						<i class="fa fa-shopping-cart"></i> Giỏ hàng
-					</a>
+					<div class="my-2 my-lg-0">
+						<a asp-controller="Cart" asp-action="Index"
+							class="btn btn-outline-info my-2 my-sm-0 text-white">
+							<i class="fas fa-shopping-cart"></i> Giỏ hàng
+							của bạn (0) </a>
+					</div>
 				</div>
 			</div>
 		</nav>
 	</header>
 	<div class="container">
+		@if (TempData["message"] is string message)
+		{
+			<div class="alert alert-@(TempData["messageType"] ?? "info")
+						alert-dismissible fade show" role="alert">
+				@message
+				<button type="button" class="btn-close" data-bsd-dismiss="alert" aria-label="Close"></button>
+			</div>
+		}
 		<main role="main" class="pb-3">
-			@if (TempData["message"] is string message)
-			{
-				<div class="alert alert-@(TempData["messageType"] ?? "info") alert-dismissible fade show" role="alert">
-					@message
-					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-				</div>
-			}
-			@RenderBody()
-		</main>
+			@RenderBody() </main>
 	</div>
-
 	<footer class="border-top footer text-muted">
 		<div class="container">
-			&copy; 2025 - SportsStoreWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-		</div>
+			&copy; 2025 - Cửa hàng Thể thao - <a asp-area="" aspd-controller="Home" asp-action="Privacy">Chính sách bảo
+				mật</a>
+			@RenderSection("FooterContent", required: false) </div>
 	</footer>
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
