--- a/SportsStoreWebApp/Views/Shared/_Layout.cshtml
+++ b/SportsStoreWebApp/Views/Shared/_Layout.cshtml
@@ -25,10 +25,14 @@
 						<li class="nav-item">
 							<a class="nav-link" asp-controller="Product" asp-action="List">Sản phẩm</a>
 						</li>
+						@if (User.Identity?.IsAuthenticated == true)
+						{
+							<li class="nav-item">
+								<a class="nav-link" asp-controller="Admin" asp-action="Index">Quản lý</a>
+							</li>
+						}
 					</ul>
-					<div class="d-flex">
-						@await Component.InvokeAsync("CartSummary")
-					</div>
+					<partial name="_LoginPartial" />
 				</div>
 			</div>
 		</nav>
